[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/dungeon/treasure/TreasureContainer.gd" type="Script" id=1]
[ext_resource path="res://scenes/dungeon/treasure/container_material.tres" type="Material" id=2]
[ext_resource path="res://scenes/dungeon/treasure/lid_material.tres" type="Material" id=3]
[ext_resource path="res://scenes/dungeon/treasure/buttons_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/dungeon/treasure/treasure_popup_theme.tres" type="Theme" id=5]

[sub_resource type="CylinderMesh" id=1]
material = ExtResource( 2 )
top_radius = 0.5
bottom_radius = 0.5
height = 1.0

[sub_resource type="CylinderMesh" id=2]
material = ExtResource( 3 )
top_radius = 0.5
bottom_radius = 0.6
height = 0.3

[sub_resource type="Animation" id=3]
resource_name = "open_container"
tracks/0/type = "transform"
tracks/0/path = NodePath("Lid")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 1.15, 0, 0, 0, 0, 1, 1, 1, 1, 0.5, 1, 0, 1.3, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1.5, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Lid:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CylinderShape" id=4]
radius = 0.5
height = 1.0

[sub_resource type="CylinderShape" id=5]
radius = 1.3

[node name="TreasureContainer" type="StaticBody"]
script = ExtResource( 1 )

[node name="Container" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Lid" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_container = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 4 )

[node name="Proximity" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Proximity"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 5 )

[node name="ItemPickupDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -113.0
margin_right = 189.0
margin_bottom = 113.0
size_flags_vertical = 8
theme = ExtResource( 5 )
window_title = "Treasure opened!"
dialog_hide_on_ok = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPickupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -37.0
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Placeholder" type="Control" parent="ItemPickupDialog/VBoxContainer"]
margin_right = 378.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="ItemPickupDialog/VBoxContainer"]
margin_top = 24.0
margin_right = 378.0
margin_bottom = 55.0
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ItemPickupDialog/VBoxContainer"]
margin_top = 59.0
margin_right = 378.0
margin_bottom = 74.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="ItemPickupDialog/VBoxContainer/HBoxContainer"]
margin_left = 187.0
margin_right = 187.0
margin_bottom = 15.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="ItemIcon" type="TextureRect" parent="ItemPickupDialog/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 7.0
margin_bottom = 7.0

[node name="CenterContainer2" type="CenterContainer" parent="ItemPickupDialog/VBoxContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 191.0
margin_bottom = 15.0

[node name="ItemStats" type="Label" parent="ItemPickupDialog/VBoxContainer/HBoxContainer/CenterContainer2"]
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_Proximity_body_exited"]
[connection signal="confirmed" from="ItemPickupDialog" to="." method="_on_ItemPickupDialog_confirmed"]
[connection signal="popup_hide" from="ItemPickupDialog" to="." method="_on_ItemPickupDialog_popup_hide"]
